#1398 Reposicionar inici pàgina
Task-url: https://github.com/GovernIB/helium/issues/1398

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -18,6 +18,7 @@ decorator.logo.govern=Govern de les Illes Balears
 decorator.logo.manera=Una manera de hacer Europa
 decorator.logo.feder=Fondo Europeo de Desarrollo Regional 
 decorator.logo.ue=Unió Europea
+decorator.arrow-top=Tornar a l'inici de la pàgina
 
 error.llistat.tipus=Tipus error
 error.llistat.text=Texte error
