#1444 Millorar modal accions massives
Informació de processats

Task-url: https://github.com/GovernIB/helium/issues/1444

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -361,8 +361,8 @@ expedient.tramitacio.massiva.header.dataInici=Data inici
 expedient.tramitacio.massiva.header.dataFi=Data Fi
 expedient.tramitacio.massiva.header.data=Data
 expedient.tramitacio.massiva.header.usuari=Creada per
+expedient.tramitacio.massiva.header.processats=Processats
 expedient.tramitacio.massiva.header.error=Errors
-expedient.tramitacio.massiva.header.ok=Ok
 expedient.tramitacio.massiva.error.desconegut=[Error desconegut]
 
 expedient.informe.canviar=Canviar consulta
