#1444 Millorar modal accions massives
Botó per cancel·lar i permisos.

Task-url: https://github.com/GovernIB/helium/issues/1444

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -364,6 +364,7 @@ expedient.tramitacio.massiva.header.usuari=Creada per
 expedient.tramitacio.massiva.header.processats=Processats
 expedient.tramitacio.massiva.header.error=Errors
 expedient.tramitacio.massiva.error.desconegut=[Error desconegut]
+expedient.tramitacio.massiva.cancelar.confirm=Estau segur que voleu cancel·lar les execucions massives dels expedients pendents?
 
 expedient.informe.canviar=Canviar consulta
 expedient.informe.generacio=Generació de l'informe
