--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -1371,6 +1371,10 @@ expedient.tipus.integracio.distribucio.activar=Activar
 expedient.tipus.integracio.distribucio.codiProcediment=Codi procediment
 expedient.tipus.integracio.distribucio.validacio.codiProcediment.repetit=Ja existeix el tipus d''expedient "{0} - {1}" a l''entorn "{2} - {3}" actiu per la combinació [codi procediment="{4}", codi assumpte="{5}"]
 expedient.tipus.integracio.distribucio.codiAssumpte=Codi assumpte
+expedient.tipus.integracio.distribucio.procesAuto=Processament automàtic
+expedient.tipus.integracio.distribucio.procesAuto.comment=Indica si processar automàticament les anotacions associades amb el tipus d'expedient o l'expedient amb el mateix número.
+expedient.tipus.integracio.distribucio.sistra=Integració amb SISTRA
+expedient.tipus.integracio.distribucio.sistra.comment=Indica si aplicar el mapeit de documents i variables de la integració amb SISTRA sobre els documents annexos de les anotacions de Distribucio entrants en el moment del processament.
 
 
 expedient.tipus.integracio.notificacio.organCodi=Codi d'òrgan
