#1446 Error ordenant per "Expedient" en el llistat de tasques
Task-url: https://github.com/GovernIB/helium/issues/1446

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -1744,6 +1744,7 @@ tasca.llistat.filtre.camp.mostrar.usuari=Tasques personals
 tasca.llistat.filtre.camp.mostrar.grup=Tasques de grup
 
 tasca.llistat.columna.titol=Tasca
+tasca.llistat.columna.titol.tasca=Tasca títol
 tasca.llistat.columna.expedient=Expedient
 tasca.llistat.columna.tipexp=Tipus d'expedient
 tasca.llistat.columna.creada=Creada el
