#1460 Afegir opció desplegar .par en la importació TE
Task-url: https://github.com/GovernIB/helium/issues/1460

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -862,10 +862,13 @@ expedient.tipus.importar.form.carregar=Carregar el fitxer
 expedient.tipus.importar.form.seleccionar=Seleccionar el contingut
 expedient.tipus.importar.form.opcions.dadesBasiques=Incloure dades bàsiques (títol, opcions, seqüències)
 expedient.tipus.importar.form.opcions.sobreEscriure=Sobreescriure dades existents amb mateix codi
-expedient.tipus.importar.form.camp.codi=Codi
+expedient.tipus.importar.form.opcions.desplegarDefinicions=Desplegar .par de les definicions importades
 
 expedient.tipus.importar.form.opcions.dadesBasiques.info= Es pot marcar aquesta opció per incloure la sobreescriptura de les dades bàsiques del tipus d'expedient. Les dades bàsiques són les del formulari de modificació de la informació de l'expedient tret del codi del tipus d'expedent.
 expedient.tipus.importar.form.opcions.sobreEscriure.info=Si el tipus d'expedient conté dades que coincideixin amb el codi de les dades que s'importen es pot marcar aquesta opció per sobreescriure la configuració o no marcar-la per conservar les dades del tipus de l'expedient tal i com estan.
+expedient.tipus.importar.form.opcions.desplegarDefinicions.info=Es pot marcar aquesta opció per desplegar el .par de les definicions de procés importades com una nova versió encara que la definició de procés ja existeixi en el tipus d'expedient on s'està realitzant la importació.
+
+expedient.tipus.importar.form.camp.codi=Codi
 
 expedient.tipus.importar.form.error.arxiu.buit=No s'ha seleccionat cap arxiu o no conté cap informació
 expedient.tipus.importar.form.error.arxiu.erroni=El contingut de l''arxiu no es correspon amb una exportació de tipus d''expedient tal i com s''espera
