#1456 Nou botó per reemprendre execucions massives cancel·lades

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -365,6 +365,7 @@ expedient.tramitacio.massiva.header.processats=Processats
 expedient.tramitacio.massiva.header.error=Errors
 expedient.tramitacio.massiva.error.desconegut=[Error desconegut]
 expedient.tramitacio.massiva.cancelar.confirm=Estau segur que voleu cancel·lar les execucions massives dels expedients pendents?
+expedient.tramitacio.massiva.rependre.confirm=Estau segur que voleu rependre la execució massiva dels expedients cancelats?
 
 expedient.informe.canviar=Canviar consulta
 expedient.informe.generacio=Generació de l'informe
@@ -2117,6 +2118,7 @@ comu.boto.accions=Accions
 comu.boto.eines=Eines
 comu.boto.guardar=Guardar
 comu.boto.cancelar=Cancel·lar
+comu.boto.rependre=Rependre
 comu.boto.generar=Generar
 comu.boto.tancar=Tancar
 comu.boto.crear=Crear
