#1457 Error validació llargada codi postal interessat

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -107,8 +107,8 @@ interessat.form.camp.entregaPostal=Entrega postal
 interessat.form.camp.entregadeh=Entrega a la Direcció Electrònica Hablitada (DEH)
 interessat.form.camp.entregadehobligat=Obligat
 
-interessat.form.valid.email=Aquest camp és obligatori si està habilitada l''entrega a la Direcció Electrònica Hablitada (DEH)
-interessat.form.valid.linia=Aquest camp és obligatori si està habilitada l''entrega postal
+interessat.form.valid.email=Aquest camp és obligatori si està habilitada l'entrega a la Direcció Electrònica Hablitada (DEH)
+interessat.form.valid.linia=Aquest camp és obligatori si està habilitada l'entrega postal
 interessat.tipus.enum.ADMINISTRACIO=Administració
 interessat.tipus.enum.FISICA=Fisica
 interessat.tipus.enum.JURIDICA=Juridica
