#1471 Alta d'expedients amb fulla CSV

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -229,6 +229,9 @@ notificacio.enviament.estat.enum.ENVIAT_SIR=Enviada
 alerta.llistat.marcar_com_llegida=Marcar llegida
 alerta.llistat.marcar_no_llegida=Desmarcar llegida
 
+expedient.iniciar.alta.csv=Alta CSV
+expedient.alta.massiva.titol=Alta massiva d'expedients
+
 expedient.llistat.titol=Consulta d'expedients
 expedient.llistat.tasca.ajax.error=Error al refrescar la llista d'tasques
 expedient.llistat.expedientTipusPermis.ajax.error=Error l'obtenir els permisos sobre aquest tipus d'expedient
