#1464 Migrar àrees i càrrecs de la interfície antiga 2.6 a la nova 3.2

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -22,9 +22,22 @@ error.contrasenya.repeticio=La contrasenya i la repetició no coincideixen
 error.persona.codi.repetit=Ja existeix una altra persona amb aquest codi
 error.entorn.codi.repetit=Ja existeix un altre entorn amb aquest codi
 error.cap.entorn=No hi ha cap entorn seleccionat
-error.area.codi.repetit=Ja existeix una altra area amb aquest codi
-error.areatipus.codi.repetit=Ja existeix una altre tipus d'àrea amb aquest codi
+error.area.validacio=Hi ha errors de validació
+error.area.nom.buit=El nom ha de tenir algun valor
+error.area.codi.repetit=Ja existeix una altra àrea amb aquest codi
+error.area.codi.buit=El codi ha de tenir algun valor
+error.area.tipus.area.buida=Ha de seleccionar un tipus d''àrea
+error.areatipus.codi.repetit=Ja existeix una altre tipus d''àrea amb aquest codi
+error.area.nou.membre.validacio=Hi ha errors de validacio
+error.area.nou.membre.codi.persona.inexistent=No hi ha cap persona amb aquets codi
+error.area.nou.membre.codi.persona.repetit=El membre ja té un càrrec dins l'àrea
+error.area.nou.membre.carrec.inexistent=El càrrec no existeix
+error.area.pare.no.ella.mateixa=L''àrea no pot ser pare d''ella mateixa.
+
+error.carrec.area.inexistent=Àrea inexistent
 error.carrec.codi.repetit=Ja existeix una altre càrrec amb aquest codi
+error.carrec.codi.buit=El codi ha de tenir algun valor
+
 error.expedienttipus.codi.repetit=Ja existeix una altre tipus d'expedient amb aquest codi
 error.expedienttipus.desconegut=No s'ha trobat el tipus d'expedient
 error.expedienttipus.sistra.repetit=Ja existeix un altre tipus d'expedient amb aquest mateix identificador
