--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -705,6 +705,7 @@ comuns.afegir=Afegir
 comuns.amunt=Amunt
 comuns.area=Àrea
 comuns.arees=Àrees
+comuns.tipusArea=Tipus Àrea
 comuns.arxiu=Arxiu
 comuns.aturar=Aturar
 comuns.avall=Avall
