--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -9,6 +9,7 @@ decorator.menu.informes=Informes
 decorator.menu.consultes=Consultes
 decorator.menu.consultes.generic=Consulta general
 decorator.menu.disseny.tipus.expedient=Tipus d'expedient
+decorator.menu.organitzacio=Organització
 decorator.menu.administracio=Administració
 decorator.menu.administracio.tasques.execucio=Tasques en execució
 decorator.menu.administracio.reindexacions=Reindexacions asíncrones
@@ -2401,6 +2402,84 @@ reindexacions.boto.reempendre=Reempendre la tasca en segon pla de reindexacions 
 reindexacions.boto.aturar=Aturar la tasca en segon pla de reindexacions asíncrones
 reindexacions.boto.aturar.confirm=Esteu segur que voleu aturar la tasca en segon pla de reindexacions asíncrones? Els canvis en les dades dels expedients deixaran d'actualitzar-se asíncronament per les consultes.
 reindexacions.advertencia.aturat=Actualment la tasca de reindexació en segon pla està aturada.
+
+carrec.llistat.titol=Càrrecs
+carrec.llistat.columna.codi=Codi
+carrec.llistat.columna.grup=Grup
+carrec.llistat.columna.nom=Nom
+carrec.llistat.columna.persona=Persona
+carrec.llistat.columna.area=Àrea
+carrec.llistat.accio.nou=Nou càrrec
+carrec.llistat.confirmacio.esborrar=Estau segur que voleu esborrar aquest càrrec?
+carrec.controller.esborrat=El càrrec s'ha esborrat correctament.
+carrec.controller.modificat=Càrrec modificat correctament.
+carrec.controller.creat=Càrrec creat correctament.
+carrec.form.titol.nou=Crear càrrec
+carrec.form.titol.modificar=Modificar càrrec
+carrec.form.camp.codi=Codi
+carrec.form.camp.grup=Grup
+carrec.form.camp.nom=Nom
+carrec.form.camp.descripcio=Descripcio
+carrec.form.camp.area=Àrea
+carrec.form.camp.nom.home=Nom home
+carrec.form.camp.nom.dona=Nom dona
+carrec.form.camp.tractament.home=Tractament home
+carrec.form.camp.tractament.dona=Tractament dona
+carrec.form.camp.sexe=Sexe
+carrec.helium.pipella.configurats=Configurats
+carrec.helium.pipella.no.configurats=Sense configurar
+carrec.helium.llistat.configurar=Configurar
+carrec.helium.configurar.form.titol=Configurar càrrec
+
+area.llistat.titol=Arees
+area.llistat.columna.codi=Codi
+area.llistat.columna.nom=Nom
+area.llistat.columna.tipus=Tipus
+area.llistat.columna.pare=Pare
+area.llistat.accio.nova=Nova àrea
+area.llistat.confirmacio.esborrar=Estau segur que voleu esborrar aquesta àrea?
+area.controller.esborrada=L'àrea s'ha esborrat correctament.
+area.controller.creada=Àrea creada correctamnet.
+area.controller.modificada=Àrea modificada correctament.
+area.form.titol.nou=Crear àrea
+area.form.titol.modificar=Modificar àrea
+area.form.camp.codi=Codi
+area.form.camp.nom=Nom
+area.form.camp.descripcio=Descripcio
+area.form.camp.pare=Pare
+area.selector.placeholder=<< Seleccioni una àrea >>
+area.boto.afegir.membre=Afegir membre
+area.nou.membres.titol=Membres
+area.nou.membre.form.camp.persona=Persona
+area.nou.membre.form.camp.persona.placeholder=<< Seleccioni una persona >>
+area.nou.membre.form.camp.carrec=Càrrec
+area.nou.membre.form.camp.carrec.placeholder=<< Seleccioni un càrrec >>
+area.membre.llistat.carrec=Càrrecs
+area.membre.llistat.nom=Nom sencer
+area.membre.controller.creat=Membre afegit
+area.membre.boto.text=Membres
+area.membre.esborrar.confirm=Estau segur que voleu esborrar aquest membre de l'àrea?
+area.membre.esborrat=Membre esborrat correctament
+area.helium.pipella.configurades=Configurades
+area.helium.pipella.no.configurades=Sense configurar
+area.helium.llistat.configurar=Configurar
+area.helium.configurar.form.titol=Configurar àrea
+
+tipusArea.llistat.titol=Tipus d'àrea
+tipusArea.llistat.columna.codi=Codi
+tipusArea.llistat.columna.nom=Nom
+tipusArea.llistat.accio.nova=Nou tipus d'àrea
+tipusArea.llistat.confirmacio.esborrar=Estau segur que voleu esborrar aquest tipus d'àrea?
+tipusArea.llistat.accio.nou=Nou tipus d'àrea
+tipusArea.controller.esborrada=El tipus d'àrea s'ha esborrat correctament.
+tipusArea.controller.creat=Tipus d'àrea creat correctament.
+tipusArea.controller.modificat=Tipus d'àrea modificat correctament.
+tipusArea.form.titol.nou=Crear tipus d'àrea
+tipusArea.form.titol.modificar=Modificar tipus d'àrea
+tipusArea.form.camp.codi=Codi
+tipusArea.form.camp.nom=Nom
+tipusArea.form.camp.descripcio=Descripció
+tipusArea.selector.placholder=<< Seleccioni un tipus d'àrea >>
 
 
 Pattern=El format no és correcte
