#1471 Alta d'expedients amb fulla CSV
- Alta per CSV

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -230,7 +230,22 @@ alerta.llistat.marcar_com_llegida=Marcar llegida
 alerta.llistat.marcar_no_llegida=Desmarcar llegida
 
 expedient.iniciar.alta.csv=Alta CSV
+
 expedient.alta.massiva.titol=Alta massiva d'expedients
+expedient.alta.massiva.form.dataProgramada=Data i hora inici
+expedient.alta.massiva.form.enviarEmail=Enviar correu al finalitzar l'execució
+expedient.alta.massiva.form.file=Arxiu CSV
+expedient.alta.massiva.form.file.info=Arxiu CSV amb valors separats per punt i coma ';' i valors entre corxets "" codificat en UTF-8 amb la primera fila amb els codis de les variables i amb les tres primeres columnes corresponents a l'any, número i títol per l'expedient si correspon.
+expedient.alta.massiva.form.file=Arxiu CSV
+expedient.alta.massiva.form.success=Alta massiva programada correctament
+expedient.alta.massiva.form.error=Error programant l'alta massiva amb CSV: {0}
+
+expedient.alta.massiva.validacio.arxiu.buit=No s'ha seleccionat cap arxiu o no conté cap informació
+expedient.alta.massiva.validacio.arxiu.error=Error llegint la informació de l''arxiu CSV. Asseguri''s que és un arxiu correcte: {0}
+expedient.alta.massiva.validacio.arxiu.minim.columnes=L'arxiu CSV ha de tenir com a mínim les 3 primeres columnes: any, número i títol
+expedient.alta.massiva.validacio.arxiu.numero.columnes=Totes les entrades del CSV han de tenir el mateix número de columnes.
+expedient.alta.massiva.validacio.arxiu.columnes.invalides=A la primera fila del CSV s''han trobat columnes per codis de variables no existents al tipus d''expedient: [{0}]
+expedient.alta.massiva.validacio.arxiu.max.registres=No es poden donar d''alta més de {0} expedients per alta massiva.
 
 expedient.llistat.titol=Consulta d'expedients
 expedient.llistat.tasca.ajax.error=Error al refrescar la llista d'tasques
