--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -236,16 +236,40 @@ expedient.alta.massiva.form.dataProgramada=Data i hora inici
 expedient.alta.massiva.form.enviarEmail=Enviar correu al finalitzar l'execució
 expedient.alta.massiva.form.file=Arxiu CSV
 expedient.alta.massiva.form.file.info=Arxiu CSV amb valors separats per punt i coma ';' i valors entre corxets "" codificat en UTF-8 amb la primera fila amb els codis de les variables i amb les tres primeres columnes corresponents a l'any, número i títol per l'expedient si correspon.
-expedient.alta.massiva.form.file=Arxiu CSV
+expedient.alta.massiva.form.file.exemple=Exemple d'arxiu CSV amb dades de mostra
 expedient.alta.massiva.form.success=Alta massiva programada correctament
 expedient.alta.massiva.form.error=Error programant l'alta massiva amb CSV: {0}
+expedient.alta.massiva.form.error.permis=No es pot programar l'execució massiva, s'ha de tenir permís d'execució d'scripts
 
+expedient.alta.massiva.darrera=Darrera alta massiva pel tipus d'expedient
+expedient.alta.massiva.darrera.files=Número de files
+expedient.alta.massiva.darrera.tpc=% Execució
+expedient.alta.massiva.darrera.processats=Processats
+expedient.alta.massiva.darrera.errors=Errors
+expedient.alta.massiva.darrera.dataInici=Data inici
+expedient.alta.massiva.darrera.dataFi=Data fi
+expedient.alta.massiva.darrera.usuari=Usuari
+
+expedient.alta.massiva.data.consulta=Data de la consulta
+expedient.alta.massiva.no.trobada=No s'ha trobat cap alta massiva per aquest tipus d'expedient
+
+expedient.alta.massiva.exemple.success=Arxiu CSV d'exemple descarregat correctament.
+expedient.alta.massiva.exemple.error=Error descarregant l'arxiu CSV d'exemple: {0}
+
+
+expedient.alta.massiva.resultats=Resultats
+expedient.alta.massiva.resultats.error.darrera.execucio=No hi ha cap darrera execució per descarregar resultats
+expedient.alta.massiva.resultats.success=Resultats de l'alta massiva per CSV exportats correctament
+expedient.alta.massiva.resultats.error=Error exportant el resultat de l''alta massiva per CSV: {0}
+
+expedient.alta.massiva.validacio.alta.en.proces=Actualment hi ha una altra alta massiva per CSV no finalitzada amb data d''inici {0} de l''usuari {1} per {2} expedients i no es pot programar una altra fins que acabi 
 expedient.alta.massiva.validacio.arxiu.buit=No s'ha seleccionat cap arxiu o no conté cap informació
 expedient.alta.massiva.validacio.arxiu.error=Error llegint la informació de l''arxiu CSV. Asseguri''s que és un arxiu correcte: {0}
 expedient.alta.massiva.validacio.arxiu.minim.columnes=L'arxiu CSV ha de tenir com a mínim les 3 primeres columnes: any, número i títol
 expedient.alta.massiva.validacio.arxiu.numero.columnes=Totes les entrades del CSV han de tenir el mateix número de columnes.
 expedient.alta.massiva.validacio.arxiu.columnes.invalides=A la primera fila del CSV s''han trobat columnes per codis de variables no existents al tipus d''expedient: [{0}]
 expedient.alta.massiva.validacio.arxiu.max.registres=No es poden donar d''alta més de {0} expedients per alta massiva.
+
 
 expedient.llistat.titol=Consulta d'expedients
 expedient.llistat.tasca.ajax.error=Error al refrescar la llista d'tasques
@@ -2152,6 +2176,7 @@ comu.boto.importar.dades=Importar dades
 comu.boto.exportar.dades=Exportar dades
 comu.boto.descarregar=Descarregar
 comu.boto.processar=Processar
+comu.boto.refrescar=Refrescar
 comu.cap=Cap
 comu.tots=Tots
 comu.totes=Totes
