#1471 Alta d'expedients amb fulla CSV
- Modificacions manual d'usuari i disseny
- Informar errors de format
- Correccions

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -229,7 +229,7 @@ notificacio.enviament.estat.enum.ENVIAT_SIR=Enviada
 alerta.llistat.marcar_com_llegida=Marcar llegida
 alerta.llistat.marcar_no_llegida=Desmarcar llegida
 
-expedient.iniciar.alta.csv=Alta CSV
+expedient.iniciar.alta.csv=Alta des de CSV
 
 expedient.alta.massiva.titol=Alta massiva d'expedients
 expedient.alta.massiva.form.dataProgramada=Data i hora inici
@@ -256,7 +256,7 @@ expedient.alta.massiva.no.trobada=No s'ha trobat cap alta massiva per aquest tip
 expedient.alta.massiva.exemple.success=Arxiu CSV d'exemple descarregat correctament.
 expedient.alta.massiva.exemple.error=Error descarregant l'arxiu CSV d'exemple: {0}
 
-
+expedient.alta.massiva.processar=Excecutar procés
 expedient.alta.massiva.resultats=Resultats
 expedient.alta.massiva.resultats.error.darrera.execucio=No hi ha cap darrera execució per descarregar resultats
 expedient.alta.massiva.resultats.success=Resultats de l'alta massiva per CSV exportats correctament
@@ -2294,7 +2294,7 @@ permis.TOKEN_READ.info=Permet accedir i llegir la informació dels tokens d'un ex
 permis.TOKEN_MANAGE.info=Permet realitzar accions sobre els tokens com el canvi d'estat, consultar i retrocedir.
 permis.DESIGN_ADMIN.info=Permet dissenyar el tipus d'expedient sense restriccions.
 permis.DESIGN_DELEG.info=És un permís especial de disseny de tipus d'expedient que limita les accions a modificar els documents del tipus d'expedient i l'ordre i etiqueta dels valors de les enumeracions.
-permis.SCRIPT_EXE.info=Permet executar scripts per a un expedient en tramitació.
+permis.SCRIPT_EXE.info=Permet executar scripts per a un expedient en tramitació o donar d'alta expedients de forma massiva amb un arxiu CSV.
 permis.UNDO_END.info=Permet desfinalitzar un expedient.
 permis.DEFPROC_UPDATE.info=Permet canviar la versió de la definició de procés emprada en el tipus d'expedient.
 permis.ORGANIZATION.info=Organització
