#1427 Revisar error validació de firma al ArxiuPluginCaib
Task-url: https://github.com/GovernIB/helium/issues/1427

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -2177,6 +2177,7 @@ comu.boto.exportar.dades=Exportar dades
 comu.boto.descarregar=Descarregar
 comu.boto.processar=Processar
 comu.boto.refrescar=Refrescar
+comu.boto.migrar=Migrar
 comu.cap=Cap
 comu.tots=Tots
 comu.totes=Totes
