#1490 Botó per descarregar tots els documents d'un expedient

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -391,6 +391,9 @@ expedient.document.notificar.form.camp.entregaPostalCie=Cie
 expedient.document.notificar.form.camp.entregaPostalFormatSobre=Format sobre
 expedient.document.notificar.form.camp.entregaPostalFormatFulla=Format fulla
 
+expedient.document.descarregar.zip=Descarregar la documentació com un arxiu comprimit .zip
+expedient.document.descarregar.zip.error=S''ha produït un error generant i descarregant el .zip amb la documentació: {0}
+
 notificacio.form.camp.data.programada.comment=Data en que es farà efectiu l'enviament de la notificació a Notific@
 notificacio.form.camp.data.caducitat.comment=El valor mínim és un dia després de l'enviament. A la data de caducitat se li sumaran els dies definits dins del NOTIB pel procediment
 notificacio.form.camp.retard.comment=Dies que la notificació romandrà a la seu abans de ser enviada via DEH o correu postal
