--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -269,7 +269,8 @@ expedient.alta.massiva.validacio.arxiu.minim.columnes=L''arxiu CSV ha de tenir c
 expedient.alta.massiva.validacio.arxiu.numero.columnes=Totes les entrades del CSV han de tenir el mateix número de columnes.
 expedient.alta.massiva.validacio.arxiu.columnes.invalides=A la primera fila del CSV s''han trobat columnes per codis de variables no existents al tipus d''expedient: [{0}]
 expedient.alta.massiva.validacio.arxiu.max.registres=No es poden donar d''alta més de {0} expedients per alta massiva.
-
+expedient.alta.massiva.validacio.arxiu.max.registres.no.programats=A partir de {0} registres és obligatori especificar una data d''inici posterior a les {1}:{2}h
+expedient.alta.massiva.validacio.dataInci.format.invalid=El format de la data d'inici ha de ser "dd/MM/yyyy HH:mm", per exemple "31/12/2021 23:00"
 
 expedient.llistat.titol=Consulta d'expedients
 expedient.llistat.tasca.ajax.error=Error al refrescar la llista d'tasques
