--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -200,13 +200,13 @@ error.exist.exp.mateix.numero=Ja existeix un expedient amb el mateix número, tor
 error.iniciar.expedient=S'ha produït un error iniciant l'expedient
 error.permisos.iniciar.tipus.exp=No té permisos per iniciar expedients d'aquest tipus
 
-error.reassignar.tasca=No s'ha pogut reassignar la tasca {0}
+error.reassignar.tasca=No s''ha pogut reassignar la tasca {0}
 
-error.suspendre.tasca=No s'ha pogut suspendre la tasca {0}
-error.reprendre.tasca=No s'ha pogut reprendre la tasca {0}
-error.cancelar.tasca=No s'ha pogut cancel·lar la tasca {0}
-error.alliberar.tasca=No s'ha pogut alliberar la tasca {0}
-error.agafar.tasca=No s'ha pogut agafar la tasca {0}
+error.suspendre.tasca=No s''ha pogut suspendre la tasca {0}: {1}
+error.reprendre.tasca=No s''ha pogut reprendre la tasca {0}: {1}
+error.cancelar.tasca=No s''ha pogut cancel·lar la tasca {0}: {1}
+error.alliberar.tasca=No s''ha pogut alliberar la tasca {0}: {1}
+error.agafar.tasca=No s''ha pogut agafar la tasca {0}: {1}
 
 error.iniciar.termini=No s'ha pogut iniciar el termini
 error.aturar.termini=No s'ha pogut aturar el termini
