#1468 Error codi responsable per tràmits Sistra

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -479,6 +479,7 @@ expedient.info.token.activat=El token s'ha activat correctament
 expedient.info.token.desactivat=El token s'ha desactivat correctament
 expedient.info.validacio.estat.finalitzat=No es pot deixar buit l'estat d'un expedient amb data de finalització. Si vol pot desfinalitzar l'expedient
 expedient.info.error.consulta.arxiu=Error consultant la informació de l''expedient: {0}
+expedient.info.error.consulta.responsable=Error consultant el responsable de l''expedient amb codi {0}: {1}
 
 expedient.metadades.nti.titol.nti=Metadades NTI
 expedient.metadades.nti.titol.arxiu=Metadades NTI i informació de l'arxiu
