#1513 Afegir l'idioma en les notificacions del NOTIB

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -225,7 +225,6 @@ notificacio.enviament.estat.enum.SENSE_INFORMACIO=Sense informació
 notificacio.enviament.estat.enum.ANULADA=Notificació incorrecta o errònia
 notificacio.enviament.estat.enum.ENVIAT_SIR=Enviada
 
-
 alerta.llistat.marcar_com_llegida=Marcar llegida
 alerta.llistat.marcar_no_llegida=Desmarcar llegida
 
@@ -398,6 +397,7 @@ expedient.document.descarregar.zip.error=S''ha produït un error generant i desca
 notificacio.form.camp.data.programada.comment=Data en que es farà efectiu l'enviament de la notificació a Notific@
 notificacio.form.camp.data.caducitat.comment=El valor mínim és un dia després de l'enviament. A la data de caducitat se li sumaran els dies definits dins del NOTIB pel procediment
 notificacio.form.camp.retard.comment=Dies que la notificació romandrà a la seu abans de ser enviada via DEH o correu postal
+notificacio.form.camp.idioma=Idioma
 
 expedient.document.notificar.validacio.no.notificable=Per restriccions del NOTIB només es poden notificar documents de tipus .ZIP o convertibles a PDF ({0})
 
@@ -2163,6 +2163,10 @@ enum.null =
 
 enum.document.tipus.firma.ADJUNT=Adjunta
 enum.document.tipus.firma.SEPARAT=Separada
+
+enum.idioma.CA=Català
+enum.idioma.ES=Castellà
+
 
 comu.estat.iniciat=Iniciat
 comu.estat.finalitzat=Finalitzat
