#1531 Helium MS. Fase 1 - Integrar aplicació Helium amb Helium-jbpm - Eliminar llibreria obsoleta al llistat per nous expedients

--- a/helium-controller/src/main/resources/messages_helium.properties
+++ b/helium-controller/src/main/resources/messages_helium.properties
@@ -4584,3 +4584,5 @@ js.helforms.confirmacio=L'execució d'aquesta acció provocarà que es guardin a
 filtre.expressio.usuari=Usuari
 filtre.expressio.grup=Grup
 filtre.expressio.expressio=Expressió
+
+taula.buida=No s'ha trobat cap resultat
