#1531 Helium MS. Fase 1 - Integrar aplicació Helium amb Helium-jbpm

--- a/helium-controller/src/main/resources/messages_helium.properties
+++ b/helium-controller/src/main/resources/messages_helium.properties
@@ -2546,7 +2546,6 @@ tipusArea.selector.placholder=<< Seleccioni un tipus d'àrea >>
 
 
 Pattern=El format no és correcte
-typeMismatch=El format no és correcte
 typeMismatch.float=El format no és correcte (els decimals s'han d'especificar amb un .)
 typeMismatch.int=El format no és correcte (ha de ser un nombre sencer)
 typeMismatch.java.util.Date=El format no és correcte (ha de ser dd/mm/aaaa)
@@ -2567,9 +2566,12 @@ Max=El valor ha de ser menor o igual a {1}
 typeMismatch=El contingut d'aquest camp no té el format correcte
 
 not.blank=Per favor, especifiqui algun valor
+members.not.blank=Per favor, especifiqui algun valor a tots els membres del camp
+registre.not.blank=Per favor, especifiqui algun valor a tots els camps obligatoris del registre
 not.null=Per favor, especifiqui algun valor
 email=El contingut d'aquest camp ha de ser una adreça de correu vàlida
 max.length=El contingut d'aquest camp excedeix la llargada màxima
+members.max.length=El contingut d'algun membre d'aquest camp excedeix la llargada màxima
 in.past=La data ha de ser anterior al dia d'avui
 
 fila.not.blank=La fila no pot estar buida
