#1265 Securitzar aplicació utilitzant keycloak

--- a/helium-controller/src/main/resources/messages_helium.properties
+++ b/helium-controller/src/main/resources/messages_helium.properties
@@ -19,6 +19,8 @@ decorator.menu.administracio.tasques.execucio=Tasques en execució
 decorator.menu.administracio.reindexacions=Reindexacions asíncrones
 decorator.menu.administracio.monitor.integracio=Monitor integracions
 decorator.menu.administracio.monitor.domini=Monitor dominis
+decorator.menu.desconnectar=Desconnectar
+decorator.menu.desconnectar.error=S''ha produït un error desconnectant: {0}
 decorator.logo.govern=Govern de les Illes Balears
 decorator.logo.manera=Una manera de hacer Europa
 decorator.logo.feder=Fondo Europeo de Desarrollo Regional 
