#1536 Helium MS. Fase 3 - Canvis a Helium per adaptar diferents modes de funcionar del Motor

--- a/helium-controller/src/main/resources/messages_helium.properties
+++ b/helium-controller/src/main/resources/messages_helium.properties
@@ -4590,3 +4590,6 @@ filtre.expressio.grup=Grup
 filtre.expressio.expressio=Expressió
 
 taula.buida=No s'ha trobat cap resultat
+
+motor.tipus.enum.JBPM=Jbpm
+motor.tipus.enum.CAMUNDA=Camunda
