#1536 Helium MS. Fase 3 - Canvis a Helium per adaptar diferents modes de funcionar del Motor

--- a/helium-controller/src/main/resources/messages_helium.properties
+++ b/helium-controller/src/main/resources/messages_helium.properties
@@ -4593,6 +4593,7 @@ js.helforms.confirmacio=L'execució d'aquesta acció provocarà que es guardin a
 filtre.expressio.usuari=Usuari
 filtre.expressio.grup=Grup
 filtre.expressio.expressio=Expressió
+filtre.expressio.expressio.llenguatge=Llenguatge de l'expressió
 
 taula.buida=No s'ha trobat cap resultat
 
