#1531 Helium MS. Fase 1 - Integrar aplicació Helium amb Helium-jbpm: reassignació

--- a/helium-controller/src/main/resources/messages_helium.properties
+++ b/helium-controller/src/main/resources/messages_helium.properties
@@ -1842,6 +1842,9 @@ tasca.llistat.alliberar.seleccionats.success=S''han alliberat correctament {0} d
 tasca.llistat.alliberar.seleccionats.error=No s''ha pogut alliberar la tasca "{0}" de l''expedient "{1}"
 tasca.llistat.accio.massiva.no.seleccio=No hi ha cap tasca seleccionada
 
+tasca.llistat.etiqueta.grups=Assignada als grups
+tasca.llistat.etiqueta.usuaris=Assignada als usuaris
+
 tasca.tramitacio.pipella.form=Dades
 tasca.tramitacio.pipella.document=Documents
 tasca.tramitacio.pipella.signatura=Signatures
