#1537 Integrar Helium amb microservei d'expedients
Filtres de grups i correccions

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -2238,6 +2238,7 @@ perfil.usuari.tipus.expedient=Tipus d'expedient
 perfil.usuari.consulta.tipus=Consulta
 perfil.usuari.nota.numelements=Numero d'elements que s'han de mostrar per defecte en les taules paginades.
 perfil.usuari.nota.filtre.defecte=Llistat d'expedients filtra per defecte o no expedients amb tasques actives per part de l'usuari.
+perfil.usuari.rols=Rols
 
 termini.data_ini=Data inici
 termini.data_fi=Data fi
