#1520 No incorporar annexos no mapejats en la integració amb Sistra2

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -1438,7 +1438,7 @@ expedient.tipus.integracio.distribucio.codiAssumpte=Codi assumpte
 expedient.tipus.integracio.distribucio.procesAuto=Processament automàtic
 expedient.tipus.integracio.distribucio.procesAuto.comment=Indica si processar automàticament les anotacions associades amb el tipus d'expedient o l'expedient amb el mateix número.
 expedient.tipus.integracio.distribucio.sistra=Integració amb SISTRA2
-expedient.tipus.integracio.distribucio.sistra.comment=Indica si aplicar el mapeig de documents i variables de la integració amb SISTRA2 sobre els documents annexos de les anotacions de Distribucio entrants en el moment del processament.
+expedient.tipus.integracio.distribucio.sistra.comment=Indica si aplicar el mapeig de documents i variables de la integració amb SISTRA2 sobre els documents annexos de les anotacions de Distribucio entrants en el moment del processament. Els annexos no mapejats no s'incorporaran a l'expedient
 
 
 expedient.tipus.integracio.notificacio.organCodi=Codi d'òrgan
