Tancament i correccions HELIUM 3.2.113 (2021.10.07 10:00h)

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -448,7 +448,12 @@ expedient.info.etiqueta.arxiu=Arxiu
 expedient.info.camp.numero=Número
 expedient.info.camp.titol=Títol
 expedient.info.camp.tipus=Tipus
+expedient.info.camp.registre.numero=Número de registre
+expedient.info.camp.registre.data=Data de registre
 expedient.info.camp.data.inici=Iniciat el
+expedient.info.camp.tramit.origen=Tràmit d'origen
+expedient.info.iniciat.per=Iniciat per
+expedient.info.camp.responsable=Persona responsable
 expedient.info.camp.data.fi=Finalitzat el
 expedient.info.camp.estat=Estat
 expedient.info.camp.defproc=Definició de procés
