#1549 Arxius firmats sense CSV

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -407,6 +407,8 @@ notificacio.form.camp.idioma=Idioma
 
 expedient.document.notificar.validacio.no.notificable=Per restriccions del NOTIB només es poden notificar documents de tipus .ZIP o convertibles a PDF ({0})
 
+expedient.document.verificar.csv.error=S''ha produït un error no controlat consultant el detall del document per obtenir el CSV de l''Arxiu: {0} : {1}
+
 expedient.tramitacio.massiva=Tramitació massiva
 expedient.tramitacio.massiva.header.nom=Nom tramitació
 expedient.tramitacio.massiva.header.execucio=Execució
