#1555 Generació de plantilles en la gestió de documents

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -173,6 +173,7 @@ error.esborrar.signatura=No s'ha pogut esborrar la signatura
 
 error.modificar.doc.signat=No es pot modificar un document signat
 error.generar.document=No s'ha pogut generar el document
+error.generar.document.info=No s''ha pogut generar el document: {0}
 error.generar.document.buit=La plantilla ha produit un document buit
 error.modificar.document.tipus=No hi ha cap document per modificar
 error.llistat.pendent.signar=No s'ha pogut consultar la llista de fitxers de l'portasignatura pendent de signar
