--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -343,6 +343,8 @@ expedient.document.arxiu.error.uuidnoexistent=El document no té UUID d'Arxiu
 expedient.document.arxiu.error.uuidnoexistent.info=S'ha detectat que l'expedient està integrat a l'Arxiu però el document no té UUID d'Arxiu i per tant no està guardat a l'arxiu. Podeu provar d'incorporar-lo per guardar-lo a l'Arxiu.
 expedient.document.arxiu.migrar.arxiu=Acció per migrar el document cap a l'Arxiu i incorporar-lo a l'expedient.
 expedient.document.arxiu.migrar.success=Document incorporat correctament a l'Axiu
+expedient.document.form.camp.generar.amb.plantilla=Generar plantilla
+expedient.document.form.camp.generar.amb.plantilla.info=Genera el document tipus plantilla amb la informació de l'expedient i l'adjunta com a contingut.
 expedient.document.form.camp.arxiu=Arxiu
 expedient.document.form.camp.amb.firma=Arxiu amb firma?
 expedient.document.form.camp.tipus.firma=Tipus de firma
