#1555 Generació de plantilles en la gestió de documents

--- a/helium-controller/src/main/resources/messages_helium.properties
+++ b/helium-controller/src/main/resources/messages_helium.properties
@@ -349,6 +349,8 @@ expedient.document.arxiu.error.uuidnoexistent=El document no té UUID d'Arxiu
 expedient.document.arxiu.error.uuidnoexistent.info=S'ha detectat que l'expedient està integrat a l'Arxiu però el document no té UUID d'Arxiu i per tant no està guardat a l'arxiu. Podeu provar d'incorporar-lo per guardar-lo a l'Arxiu.
 expedient.document.arxiu.migrar.arxiu=Acció per migrar el document cap a l'Arxiu i incorporar-lo a l'expedient.
 expedient.document.arxiu.migrar.success=Document incorporat correctament a l'Axiu
+expedient.document.form.camp.generar.amb.plantilla=Generar plantilla
+expedient.document.form.camp.generar.amb.plantilla.info=Genera el document tipus plantilla amb la informació de l'expedient i l'adjunta com a contingut.
 expedient.document.form.camp.arxiu=Arxiu
 expedient.document.form.camp.amb.firma=Arxiu amb firma?
 expedient.document.form.camp.tipus.firma=Tipus de firma
@@ -2754,6 +2756,7 @@ error.esborrar.signatura=No s'ha pogut esborrar la signatura
 
 error.modificar.doc.signat=No es pot modificar un document signat
 error.generar.document=No s'ha pogut generar el document
+error.generar.document.info=No s''ha pogut generar el document: {0}
 error.generar.document.buit=La plantilla ha produit un document buit
 error.modificar.document.tipus=No hi ha cap document per modificar
 error.llistat.pendent.signar=No s'ha pogut consultar la llista de fitxers de l'portasignatura pendent de signar
