#1557 Seleccionable handlers accions en tipus d'expedients

--- a/helium-controller/src/main/resources/messages_helium.properties
+++ b/helium-controller/src/main/resources/messages_helium.properties
@@ -1235,6 +1235,7 @@ expedient.tipus.accio.controller.creat=La acció s'ha creat correctament
 expedient.tipus.accio.controller.modificat=La acció s'ha modificat correctament
 expedient.tipus.accio.controller.eliminat=La acció s'ha elimitat correctament
 expedient.tipus.accio.validacio = Errors de validació
+expedient.tipus.accio.validacio.accio.no.existeix=L''acció no existeix a la darrera versió de la definició de procés
 
 ## MANTENIMENT D'ENUMERACIONS ##
 enumeracio.llistat.titol=Enumeracions
