Afegir número registre a la cerca d'expedient (fase 1 sense handler)

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -289,6 +289,7 @@ expedient.llistat.filtre.camp.data.fi.1=Data fi inicial
 expedient.llistat.filtre.camp.data.fi.2=Data fi final
 expedient.llistat.filtre.camp.geopos=Geoposició
 expedient.llistat.filtre.camp.georef=Codi georeferencial
+expedient.llistat.filtre.camp.registreNumero=Número registre
 expedient.llistat.filtre.camp.coordx=Coordenada X
 expedient.llistat.filtre.camp.coordy=Coordenada Y
 expedient.llistat.filtre.camp.tasques=Només amb tasques pendents
